# CAVLite

./: CMakeLists.txt
.github/workflows/: build.yml  windows-dll.yml
dataset/3-corridor-test/: full_agent_file.csv  meso_links.csv  meso_nodes.csv  settings.txt
preprocessor/: Readme.md  process_camlite_output.py  process_demand_from_trajectory.py  process_dtalite_output.py  process_network.py  process_signal.py
src/: CMakeLists.txt
src/CAVLite/: Agent.h  AgentInputFeeder.cpp  AgentInputFeeder.h  AgentRawInput.h  CACF.cpp  CAVLite.cpp  CAVLite.vcxproj  CAVLite.vcxproj.filters  CSVParser.cpp  CSVParser.h  DataLoader.cpp  DataLoader.h  Network.cpp  Simulation.cpp  Simulation.h  SimulationRunner.cpp  SimulationRunner.h  feeder_test.cpp  main.cpp  stdafx.h
